# tictactoe

./: .gitignore  ANewFile.txt  Cargo.toml  Changes V0.1 - Quest 2 & 2.1.txt  Changes V0.2 - Quest 2 & 2.1 & 2.2.txt  CloseKey.txt  Momoin.txt  Momoin.txt.txt  RADU.txt  README.md  Rogilla.txt  VoxelProject.uproject  Yannyx.txt  ariana.txt  ariana.txt.rtf  babaduke.txt  bwu45.txt  hittherhod.txt  hukasu.txt  igluvis  iwasinnamuknow.txt  jsky0.txt  mmatic90.txt  murgle92.txt  notafridge  questionablecat.txt  retrostackz.txt  seppe.txt  sinan.txt  thebadguy.txt  thebagleboy.txt  valzzu (Iris).txt  voxelcraft.toml  yuri.txt
Assets/: Cube.prefab  DebugLog.cs  DefaultVolumeProfile.asset  FinecraftGod.cs  UniversalRenderPipelineGlobalSettings.asset  Voxel.cs  VoxelProperties.cs  geo_Bread.fbx  geo_crazycube.fbx
Assets/Materials/: Bronze.mat  Gold.mat  Platinum.mat  Silver.mat
Assets/Prefabs/: Bronze.prefab  Gold.prefab  Platinum.prefab  Silver.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: FineCraftGod.cs  FinecraftGod.cs  Voxel.cs
Config/: DefaultEngine.ini  DefaultGame.ini  DefaultInput.ini
Content/GameMode/: VoxelGameModeBP.uasset
Content/Level/: VoxelLevel.umap
ProjectSettings/: GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
Source/: VoxelProject.Target.cs  VoxelProjectEditor.Target.cs
TicTacToe Project 1/: .gitignore
assets/: source.txt
src/: main.rs
tictactoe-unity/: README.md
unity_project/: Buutyful.txt
unreal_project/: .gitignore  .ignore  Makefile  unreal_project.code-workspace  unreal_project.uproject
(+348 files in other folders)
