[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
with-inspector = ["bevy-inspector-egui"]

[dependencies]
bevy = "0.12.1"
bevy_rand = { version = "0.4", features = ["rand_chacha"] }
bevy-inspector-egui = { version = "0.21", optional = true }

rand_core = "0.6"