[package]
name = "tictactoe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[workspace.lints.clippy]
todo = "warn"
unimplemented = "warn"
dbg_macro = "warn"
unwrap_used = "warn"
expect_used = "warn"

[features]
with-inspector = ["bevy-inspector-egui"]

[dependencies]
bevy = "0.12.1"
bevy_rand = { version = "0.4", features = ["rand_chacha"] }
bevy-inspector-egui = { version = "0.22", optional = true }

rand = "0.8.5"

serde = "1.0.194"
toml = "0.8.8"